2004-08-12  Carlos Garnacho Parro  <carlosg@gnome.org>

	* em-utils.c: Optionally use GtkFileChooser if compiled against
	Gtk+ >= 2.4.0

	* mail-config.glade: added the "use_filechooser" property to the
	various GnomeFileEntries

2004-08-10  Jeffrey Stedfast  <fejj@novell.com>

	Partial fix for bug #62771

	* em-format-quote.c (emfq_format_header): Same.

	* em-format-html.c (efh_format_header): Decode the
	X-Mailer/User-Agent headers.

2004-08-10  Not Zed  <NotZed@Ximian.com>

	* mail-session.c (get_password): just call
	e_passwords_ask_password directly.
	(pass_activate, pass_response, request_password, do_get_pass)
	(do_free_pass, main_forget_password): no longer required as
	e_password now handles the magic, and is thread safe.

	* mail-config.c (mail_config_write_on_exit): epasswords api
	change.

2004-08-06  Jeffrey Stedfast  <fejj@novell.com>

	* em-folder-tree-model.c (em_folder_tree_model_get_selected):
	Return NULL not FALSE on error.

2004-06-08  Karsten Bräckelmann  <guenther@rudersport.de>

	* em-format-html-display.c (smime_encrypt_table[4]): minor typo,
	uppercase 'the' corrected.

2004-08-03  Jeffrey Stedfast  <fejj@novell.com>

	* em-composer-utils.c (format_sender): If type="{Sender}" and name
	is an empty string, use the addr. Fixes bug #62377

2004-08-01  JP Rosevear  <jpr@novell.com>

	* default/C/Inbox: Update to just call us "Evolution" and be more
	accurate about the new features included

2004-07-29  Sivaiah Nallagatla <snallagatla@novell.com>

	* mail-errors.xml: add the error message needed for groupwise
	account setup

2004-07-28  Not Zed  <NotZed@Ximian.com>

	** See #61958.

	* mail-folder-cache.c (real_flush_updates): remove the soreinfo
	lookup, it isn't used anywhere anymore.
	(mail_note_folder): hook onto the events outside of the lock, and
	don't pass the mfi pointer anymore.
	(mail_note_store): hook onto the events outside of the lock.
	(folder_changed, folder_finalised, folder_renamed): lookup the mfi